<resources>
    <string name="app_name">BManager-Project</string>

    <!--signIn layout-->
    <string name="signIn_logo">BManager</string>
    <string name="signIn_tv_email">이메일</string>
    <string name="signIn_tv_password">비밀번호</string>
    <string name="signIn_btn_sign_in">로그인</string>
    <string name="signIn_btn_sign_up">회원가입</string>
    <string name="signIn_tv_search_password">비밀번호 찾기</string>

    <!--signUp layout-->
    <string name="signUp_tv_title">회원가입</string>
    <string name="signUp_tv_email">이메일</string>
    <string name="signUp_tv_password">비밀번호</string>
    <string name="signUp_tv_password_check">비밀번호 확인</string>
    <string name="signUp_tv_nickname">닉네임</string>
    <string name="signUp_btn_sign_up">회원가입</string>

    <!--searchPasswrod layout-->
    <string name="searchPassword_tv_title">비밀번호 찾기</string>
    <string name="searchPassword_tv_email">이메일</string>
    <string name="searchPassword_btn_search">비밀번호 찾기</string>
</resources>